@startuml
title Mihail - Recording, Transcription, Summarization & Email Draft

skinparam classAttributeIconSize 0

note as N1
  **Proxy Pattern:**
  TranscriberProxy adds caching,
  logging, and statistics.

  **Feature: Email Draft Flow**
  EmailDraftService opens default
  mail client with meeting summary.
end note

package "EchoNote.Jack" {
    class Transcript {
        - id : String
        - rawText : String
        - source : TranscriptSource
    }

    class Summary {
        - id : String
        - topics : List<String>
        - decisions : List<String>
        - notes : String
    }

    class ActionItem {
        - id : String
        - description : String
        - owner : Participant
        - dueDate : LocalDate
    }

    class MeetingRecord
    class MeetingFormatter <<Utility>>
    class InvalidEmailException
}

package "EchoNote.Mihail" {

    interface TranscriptionService <<Subject>> {
        + transcribe(audioFile : Path) : Transcript
    }

    class Transcriber <<RealSubject>> {
        - httpClient : OkHttpClient
        - objectMapper : ObjectMapper
        - apiKey : String
        --
        + Transcriber()
        + Transcriber(apiKey : String)
        + transcribe(audioFile : Path) : Transcript
        + transcribeFile(wavFile : Path) : Transcript
    }

    class TranscriberProxy <<Proxy>> {
        - realTranscriber : TranscriptionService
        - cache : Map<String, Transcript>
        - loggingEnabled : boolean
        - totalRequests : int
        - cacheHits : int
        - apiCalls : int
        --
        + TranscriberProxy()
        + TranscriberProxy(realTranscriber : TranscriptionService)
        + TranscriberProxy(realTranscriber, loggingEnabled)
        + transcribe(audioFile : Path) : Transcript
        + clearCache() : void
        + getCacheSize() : int
        + getStats() : ProxyStats
    }

    class "TranscriberProxy.ProxyStats" as ProxyStats <<Record>> {
        + totalRequests : int
        + cacheHits : int
        + apiCalls : int
        + cacheHitRate() : double
    }

    class TranscriptionException {
        + TranscriptionException(message : String)
        + TranscriptionException(message, cause)
    }

    class Recorder {
        + startRecording() : void
        + stopRecording() : Path
    }

    class Summarizer {
        + summarize(transcript : Transcript) : Summary
        + extractActions(transcript : Transcript) : List<ActionItem>
    }

    class SummarizationException {
        + SummarizationException(message : String)
        + SummarizationException(message, cause)
    }

    ' Email Draft Flow Feature
    class EmailDraftService {
        --
        + EmailDraftService()
        + openEmailDraft(record : MeetingRecord, recipientEmail : String) : void
        + validateEmail(email : String) : void
        - buildDraftSubject(record : MeetingRecord) : String
        - buildDraftBody(record : MeetingRecord) : String
        - openMailClient(to : String, subject : String, body : String) : void
    }

    class EmailDraftException {
        + EmailDraftException(message : String)
        + EmailDraftException(message : String, cause : Throwable)
    }
}

' Proxy Pattern
TranscriptionService <|.. Transcriber
TranscriptionService <|.. TranscriberProxy

TranscriberProxy --> TranscriptionService : delegates to
TranscriberProxy --> Transcript : caches
TranscriberProxy +-- ProxyStats

Transcriber --> Transcript : creates
Transcriber --> TranscriptionException : throws

' Summarizer
Summarizer --> Transcript : reads
Summarizer --> Summary : creates
Summarizer --> ActionItem : extracts
Summarizer --> SummarizationException : throws

Recorder --> TranscriptionException : throws

' Email Draft Flow
EmailDraftService --> MeetingRecord : reads
EmailDraftService --> MeetingFormatter : uses
EmailDraftService --> InvalidEmailException : throws
EmailDraftService --> EmailDraftException : throws

@enduml
